[gd_scene load_steps=16 format=3 uid="uid://c0dvogempwjhr"]

[ext_resource type="Script" path="res://scenes/bosses/boss_1.gd" id="1_vh6w2"]
[ext_resource type="Texture2D" uid="uid://coc5j7dfnw7jc" path="res://assets/boss1_1.png" id="2_1bsew"]
[ext_resource type="PackedScene" uid="uid://bv2mryk3m0kc2" path="res://scenes/activator/activator.tscn" id="3_1803v"]
[ext_resource type="Texture2D" uid="uid://b522rp1klp6x8" path="res://assets/boss1_2.png" id="3_dbjmv"]
[ext_resource type="Texture2D" uid="uid://7e37npekslox" path="res://assets/boss1_3.png" id="4_i6klf"]
[ext_resource type="Texture2D" uid="uid://crf8fdwh1xt2p" path="res://assets/boss1_4.png" id="5_ph2ti"]
[ext_resource type="Texture2D" uid="uid://dcgds56poslps" path="res://assets/boss1_5.png" id="6_8phwe"]
[ext_resource type="Texture2D" uid="uid://cs778o3y8lnqn" path="res://assets/boss1_6.png" id="7_cniqh"]
[ext_resource type="Texture2D" uid="uid://bf0qi4pdw4f5x" path="res://assets/boss1_7.png" id="8_205p1"]
[ext_resource type="Texture2D" uid="uid://c3s0qb12yqnmu" path="res://assets/boss1_8.png" id="9_e12kb"]
[ext_resource type="Texture2D" uid="uid://d33piay3uis4q" path="res://assets/boss1_9.png" id="10_v7bqs"]
[ext_resource type="AudioStream" uid="uid://b6qwe75dc0wke" path="res://assets/sfx/projectile_shot.wav" id="12_h1mc5"]
[ext_resource type="AudioStream" uid="uid://bqymrwfhrs8sn" path="res://assets/sfx/explosive_projectile_shot.wav" id="13_upwnc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bjgeg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1bsew")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dbjmv")
}, {
"duration": 1.0,
"texture": ExtResource("4_i6klf")
}, {
"duration": 1.0,
"texture": ExtResource("5_ph2ti")
}, {
"duration": 1.0,
"texture": ExtResource("6_8phwe")
}],
"loop": false,
"name": &"shoot",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_cniqh")
}, {
"duration": 1.0,
"texture": ExtResource("8_205p1")
}, {
"duration": 1.0,
"texture": ExtResource("9_e12kb")
}, {
"duration": 1.0,
"texture": ExtResource("10_v7bqs")
}],
"loop": false,
"name": &"shoot_explosion",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3isx"]
size = Vector2(3, 102)

[node name="Boss1" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_vh6w2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_bjgeg")
animation = &"shoot_explosion"

[node name="WeakPoint3" parent="." instance=ExtResource("3_1803v")]
position = Vector2(-22, -22)
rotation = 5.38687

[node name="WeakPoint1" parent="." instance=ExtResource("3_1803v")]
position = Vector2(24, -22)
rotation = 0.805309

[node name="WeakPoint2" parent="." instance=ExtResource("3_1803v")]
position = Vector2(0, 34)
rotation = 3.14159

[node name="ShootPoint" type="Marker2D" parent="."]

[node name="BlockingCollision" type="CollisionPolygon2D" parent="."]
scale = Vector2(3, 3)
build_mode = 1
polygon = PackedVector2Array(2, -9, -2, -9, -2, -8, -4, -8, -4, -7, -5, -7, -5, -6, -6, -6, -6, -5, -7, -5, -7, -4, -8, -4, -8, -2, -20, -2, -24, -6.66667, -24, 6.66667, -20, 2, -8, 2, -8, 4, -7, 4, -7, 5, -6, 5, -6, 6, -5, 6, -5, 7, -4, 7, -4, 8, -2, 8, -2, 9, 2, 9, 2, 8, 4, 8, 4, 7, 5, 7, 5, 6, 6, 6, 6, 5, 7, 5, 7, 4, 8, 4, 8, 2, 20, 2, 24, 6.66667, 24, -6.66667, 20, -2, 8, -2, 8, -4, 7, -4, 7, -5, 6, -5, 6, -6, 5, -6, 5, -7, 4, -7, 4, -8, 2, -8)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="DamaginCollisionLeft" type="CollisionPolygon2D" parent="DamageArea"]
scale = Vector2(3, 3)
build_mode = 1
polygon = PackedVector2Array(-25, -17, -25, -16, -26, -16, -26, -14, -27, -14, -27, -12, -28, -12, -28, -10, -29, -10, -29, -7, -30, -7, -30, -4, -31, -4, -31, 4, -30, 4, -30, 7, -29, 7, -29, 10, -28, 10, -28, 12, -27, 12, -27, 14, -26, 14, -26, 16, -25, 16, -25, 17)

[node name="DamaginCollisionRight" type="CollisionPolygon2D" parent="DamageArea"]
scale = Vector2(3, 3)
build_mode = 1
polygon = PackedVector2Array(25, 17, 25, 16, 26, 16, 26, 14, 27, 14, 27, 12, 28, 12, 28, 10, 29, 10, 29, 7, 30, 7, 30, 4, 31, 4, 31, -4, 30, -4, 30, -7, 29, -7, 29, -10, 28, -10, 28, -12, 27, -12, 27, -14, 26, -14, 26, -16, 25, -16, 25, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-73.5, 0)
shape = SubResource("RectangleShape2D_p3isx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(73, 0)
shape = SubResource("RectangleShape2D_p3isx")

[node name="ProjectileShotSFX2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_h1mc5")

[node name="ExplosiveProjectileShotSFX2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_upwnc")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
